    * Add: fileinfo is now supported by the solaris agent. Thanks to Daniel Roettgermann
    * Logwatch: unknown eventlog level ('u') from windows agent treated as warning
    * FIX: logwatch_ec: Added state undefined as priority
    * Add: mailman_lists - New check to gather statistics of mailman mailinglists
    * FIX: megaraid_bbu - Handle missing charge information (ignoring them)

    Multisite:
    * FIX: Fixed rendering of dashboard globes in opera
    * When having row selections enabled and no selected and performing
      actions an error message is displayed instead of performing the action on
      all rows
    * Storing row selections in user files, cleaned up row selection 
      handling to single files. Cleaned up GET/POST mixups in confirm dialogs
    * Add: New user_options to limit seen nagios objects even the role is set to see all
    * FIX: LDAP: Fixed problem with special chars in LDAP queries when having
    contactgroup sync plugin enabled
    * FIX: LDAP: OpenLDAP - Changed default filter for users
    * FIX: LDAP: OpenLDAP - Using uniqueMember instead of member when searching for groups of a user
    * LDAP: Role sync plugin validates the given group DNs with the group base dn now
    * LDAP: Using roles defined in default user profile in role sync plugin processing
    * LDAP: Improved error handling in case of misconfigurations
    * LDAP: Reduced number of ldap querys during a single page request / sync process
    * LDAP: Implemnted some kind of debug logging for LDAP communication

    WATO:
    * CPU load ruleset does now accept float values
    * Added valuespec for cisco_mem check to configure thresholds via WATO
    * FIX: Fixed displaying of tag selections when creating a rule in the ruleeditor
    * FIX: Rulesets are always cloned in the same folder

1.2.1i4:
    Core:
    * Better exception handling when executing "Check_MK"-Check. Printing python
      exception to status output and traceback to long output now.