@@ -13,6 +13,7 @@
     * FIX: logwatch_ec: Added state undefined as priority
     * Add: mailman_lists - New check to gather statistics of mailman mailinglists
     * FIX: megaraid_bbu - Handle missing charge information (ignoring them)
+    * FIX: myssql_tablespaces - fix PNP graph (thanks to Christian Zock)
 
     Multisite:
     * FIX: Fixed rendering of dashboard globes in opera
